--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Devonshire&display=swap"
       rel="stylesheet"
     />
-    <title>Food & Recipes</title>
+    <title>Gourmet Guide</title>
   </head>
   <body>
     <div id="root"></div>
